# Copyright (c) 2021-2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/config/components/idl_tool/idl.gni")
import("//build/ohos.gni")
import("../../../os_account.gni")

idl_gen_interface("frameworks_osaccount_interface") {
  sources = [
    "IOsAccount.idl",
    "IOsAccountEvent.idl",
    "IOsAccountStateReplyCallback.idl",
    "${os_account_core_path}/IOsAccountConstraintEvent.idl",
  ]
  subsystem_name = "account"
  part_name = "os_account"
}

config("frameworks_osaccount_interface_public_config") {
  include_dirs = [ "${target_gen_dir}" ]
}

config("osaccountinterface_config") {
  visibility = [ ":*" ]
  include_dirs = [
    "${common_path}/include",
    "${domain_account_framework_path}/include",
    "${domain_account_interfaces_native_path}/include",
    "${innerkits_native_path}/include",
    "${innerkits_path}/include",
    "${os_account_core_path}/include",
    "${os_account_interfaces_native_path}/include",
    "${innerkits_common}/include",
    "${target_gen_dir}",
  ]
  cflags = []
  if (target_cpu == "arm") {
    cflags += [ "-DBINDER_IPC_32BIT" ]
  }
  cflags += [ "-pipe" ]
}

ohos_shared_library("os_account_innerkits") {
  branch_protector_ret = "pac_ret"

  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  sources = [
    "${domain_account_framework_path}/src/domain_account_common.cpp",
    "${os_account_core_path}/src/os_account_constraint_subscriber_manager.cpp",
    "${os_account_core_path}/src/os_account.cpp",
    "${os_account_core_path}/src/os_account_death_recipient.cpp",
    "${os_account_core_path}/src/os_account_event_listener.cpp",
    "${os_account_core_path}/src/os_account_state_parcel.cpp",
    "${os_account_core_path}/src/os_account_state_reply_callback.cpp",
    "src/os_account_constraint_subscribe_info.cpp",
    "src/os_account_constraint_subscriber.cpp",
    "src/os_account_info.cpp",
    "src/os_account_info_parcel.cpp",
    "src/os_account_manager.cpp",
    "src/os_account_subscribe_info.cpp",
    "src/os_account_subscriber.cpp",
    "${innerkits_native_path}/src/account_info.cpp",
  ]
  output_values = get_target_outputs(":frameworks_osaccount_interface")
  sources += filter_include(output_values,
                            [
                              "*os_account_constraint_event_stub.cpp",
                              "*os_account_event_stub.cpp",
                              "*os_account_state_reply_callback_proxy.cpp",
                              "*os_account_proxy.cpp",
                            ])

  defines = [
    "ACCOUNT_LOG_TAG = \"OsAccountNativeFwk\"",
    "LOG_DOMAIN = 0xD001B00",
  ]

  configs = [ ":osaccountinterface_config" ]

  public_configs = [ ":osaccountinterface_config" ]
  public_configs += [ "${domain_account_framework_path}:frameworks_domain_account_interface_public_config" ]

  use_exceptions = true

  deps = [
    ":frameworks_osaccount_interface",
    "${common_path}:libaccount_common",
    "${domain_account_framework_path}:domain_account_innerkits",
    "${innerkits_native_path}:libaccountkits",
  ]

  if (!use_clang_coverage) {
    version_script = "libos_account_innerkits.map"
  }

  cflags_cc = []
  if (os_account_support_domain_accounts) {
    cflags_cc += [ "-DSUPPORT_DOMAIN_ACCOUNTS" ]
  }

  if (os_account_support_lock_os_account) {
    cflags_cc += [ "-DSUPPORT_LOCK_OS_ACCOUNT" ]
  }

  external_deps = [
    "cJSON:cjson",
    "hilog:libhilog",
    "samgr:samgr_proxy",
  ]

  public_external_deps = [
    "ability_base:base",
    "ability_base:want",
    "c_utils:utils",
    "ipc:ipc_single",
  ]

  innerapi_tags = [
    "platformsdk",
    "sasdk",
  ]
  subsystem_name = "account"
  part_name = "os_account"
}

ohos_source_set("os_account_proxy") {
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }
  configs = [ ":osaccountinterface_config" ]
  public_configs = [ ":osaccountinterface_config" ]
  output_values = get_target_outputs(":frameworks_osaccount_interface")
  sources = filter_include(output_values, [ "*os_account_proxy.cpp" ])
  deps = [ ":frameworks_osaccount_interface" ]
  external_deps = [
    "ability_base:want",
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_single",
  ]
  subsystem_name = "account"
  part_name = "os_account"
}

ohos_source_set("os_account_stub") {
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }
  configs = [ ":osaccountinterface_config" ]
  public_configs = [ ":osaccountinterface_config" ]
  output_values = get_target_outputs(":frameworks_osaccount_interface")
  sources = filter_include(output_values, [ "*os_account_stub.cpp" ])
  deps = [ ":frameworks_osaccount_interface" ]
  external_deps = [
    "ability_base:want",
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_single",
  ]
  subsystem_name = "account"
  part_name = "os_account"
}

ohos_source_set("os_account_constraint_event_proxy") {
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }
  configs = [ ":osaccountinterface_config" ]
  public_configs = [ ":osaccountinterface_config" ]
  output_values = get_target_outputs(":frameworks_osaccount_interface")
  sources = filter_include(output_values, [ "*os_account_constraint_event_proxy.cpp" ])
  deps = [ ":frameworks_osaccount_interface" ]
  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_single",
  ]
  subsystem_name = "account"
  part_name = "os_account"
}

ohos_source_set("os_account_constraint_event_stub") {
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }
  configs = [ ":osaccountinterface_config" ]
  public_configs = [ ":osaccountinterface_config" ]
  output_values = get_target_outputs(":frameworks_osaccount_interface")
  sources = filter_include(output_values, [ "*os_account_constraint_event_stub.cpp" ])
  deps = [ ":frameworks_osaccount_interface" ]
  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_single",
  ]
  subsystem_name = "account"
  part_name = "os_account"
}

ohos_source_set("os_account_event_proxy") {
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }
  configs = [ ":osaccountinterface_config" ]
  public_configs = [ ":osaccountinterface_config" ]
  output_values = get_target_outputs(":frameworks_osaccount_interface")
  sources = filter_include(output_values, [ "*os_account_event_proxy.cpp" ])
  deps = [ ":frameworks_osaccount_interface" ]
  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_single",
  ]
  subsystem_name = "account"
  part_name = "os_account"
}

ohos_source_set("os_account_event_stub") {
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }
  configs = [ ":osaccountinterface_config" ]
  public_configs = [ ":osaccountinterface_config" ]
  output_values = get_target_outputs(":frameworks_osaccount_interface")
  sources = filter_include(output_values, [ "*os_account_event_stub.cpp" ])
  deps = [ ":frameworks_osaccount_interface" ]
  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_single",
  ]
  subsystem_name = "account"
  part_name = "os_account"
}

ohos_source_set("os_account_state_reply_callback_proxy") {
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }
  configs = [ ":osaccountinterface_config" ]
  public_configs = [ ":osaccountinterface_config" ]
  output_values = get_target_outputs(":frameworks_osaccount_interface")
  sources = filter_include(output_values, [ "*os_account_state_reply_callback_proxy.cpp" ])
  deps = [ ":frameworks_osaccount_interface" ]
  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_single",
  ]
  subsystem_name = "account"
  part_name = "os_account"
}

ohos_source_set("os_account_state_reply_callback_stub") {
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }
  configs = [ ":osaccountinterface_config" ]
  public_configs = [ ":osaccountinterface_config" ]
  output_values = get_target_outputs(":frameworks_osaccount_interface")
  sources = filter_include(output_values, [ "*os_account_state_reply_callback_stub.cpp" ])
  deps = [ ":frameworks_osaccount_interface" ]
  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_single",
  ]
  subsystem_name = "account"
  part_name = "os_account"
}