# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/account/os_account/os_account.gni")
import("//build/ohos.gni")

config("public_account_config") {
  include_dirs = [ "../include" ]
}

config("accountkits_config") {
  defines = [
    "ACCOUNT_LOG_TAG = \"ACCOUNT_INNER_KITS\"",
    "LOG_DOMAIN = 0xD001B00",
  ]
  include_dirs = [
    "../include",
    "${common_path}/log/include",
    "${common_path}/perf_stat/include",
    "${common_path}/account_error/include",
    "${services_path}/accountmgr/include",
    "${innerkits_path}/include",
    "//third_party/json/include",
    "//utils/native/base/include",
    "//utils/system/safwk/native/include",
  ]
}

ohos_shared_library("libaccountkits") {
  sources = [
    "src/account_proxy.cpp",
    "src/ohos_account_kits.cpp",
    "src/ohos_account_kits_impl.cpp",
  ]

  configs = [ ":accountkits_config" ]

  public_configs = [ ":public_account_config" ]

  deps = [ "${common_path}:libaccount_common" ]

  external_deps = [
    "aafwk_standard:base",
    "aafwk_standard:intent",
    "appexecfwk_standard:appexecfwk_base",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "samgr_L2:samgr_proxy",
  ]
  part_name = "os_account_standard"
}
