# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

group("param_files") {
  deps = [
    ":account.para",
    ":account.para.dac",
  ]
}

ohos_prebuilt_etc("account.para") {
  source = "account.para"
  relative_install_dir = "param"
  part_name = "os_account"
  subsystem_name = "account"
}

ohos_prebuilt_etc("account.para.dac") {
  source = "account.para.dac"
  relative_install_dir = "param"
  part_name = "os_account"
  subsystem_name = "account"
}
