# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/account/os_account/os_account.gni")
import("//build/ohos.gni")
import("//build/test.gni")

config("accountmgr_test_config") {
  include_dirs = [
    "//utils/native/base/include",
    "mock/include",
  ]

  defines = [
    "ACCOUNT_LOG_TAG = \"ACCOUNT_TEST\"",
    "LOG_DOMAIN = 0xD001B00",
  ]

  configs = []
}

group("unittest") {
  testonly = true

  deps = [
    "unittest/account_dump_helper_test:unittest",
    "unittest/account_event_provider_test:unittest",
    "unittest/account_mgr_service_test:unittest",
    "unittest/account_mgr_stub_test:unittest",
    "unittest/ohos_account_data_deal_test:unittest",
  ]
}
